fixed "chips" not showing on mobile devices

--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -1442,7 +1442,5 @@ textarea:focus {
         font-size: 0.78rem;
     }
 
-    .chip {
-        display: none;
-    }
+
 }
